web/app/themes/vestedworld/assets/styles/components/_header.scss
// Header

.site-header {
  z-index: 2000;
  @include clearfix;
  position: relative;
  padding: 16px 0 16px 24px;
  height: 62px;
  background: $gray-lite;

  .logo {
    font: 1px/1 $sans; // override default h1 style
    @include media-md {
      width: 50%;
      float: left;
    }
  }

  h1 {
    margin: 0;
  }

  .icon-logo {
    width: 22px;
    height: 22px;
    margin-right: 16px;
    vertical-align: middle;
    fill: $blue;
  }
  .icon-vestedworld {
    width: 145px;
    height: 30px;
    vertical-align: middle;
    fill: $blue;
  }

  .nav-actions {
    position: relative;
  }

  @include media-md {
    padding: 16px #{100% / 24 * 1} 16px 24px;
  }
}

